<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcode_scan_help_info_title"
            android:padding="@dimen/padding"
            android:textColor="@android:color/black"
            android:textStyle="bold"
        />
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode_scan_help_bullet"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="@dimen/padding" /> 
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcode_scan_help_info_line1"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding" />
        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode_scan_help_bullet"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="@dimen/padding" /> 
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcode_scan_help_info_line2"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding" />
        </LinearLayout>
        
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode_scan_help_bullet"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="@dimen/padding" /> 
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcode_scan_help_info_line3"
                android:textColor="@android:color/black"
                android:padding="@dimen/padding" />
        </LinearLayout>
        
    	<ImageView
            android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:src="@drawable/barcode_help"
    	    android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding"
    	/>
    
        <Button
            android:id="@+id/barcode_scan_help_OK_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_scan_help_OK"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding"
            android:textStyle="bold"
        />
    </LinearLayout>
</ScrollView>